WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187624
PingLoad does not need to ref the NetworkConnectionToWebProcess
https://bugs.webkit.org/show_bug.cgi?id=187624
Summary
PingLoad does not need to ref the NetworkConnectionToWebProcess
Chris Dumez
Reported
2018-07-12 15:49:57 PDT
PingLoad does not need to ref the NetworkConnectionToWebProcess and keep it alive longer than it needs to be.
Attachments
Patch
(3.62 KB, patch)
2018-07-12 15:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-12 15:53:42 PDT
Created
attachment 344893
[details]
Patch
youenn fablet
Comment 2
2018-07-12 15:59:20 PDT
Comment on
attachment 344893
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344893&action=review
> Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:270 > + auto completionHandler = [connection = m_connection.copyRef(), identifier = loadParameters.identifier] (const ResourceError& error, const ResourceResponse& response) {
Is it really safe? LOL ;)
WebKit Commit Bot
Comment 3
2018-07-12 16:46:24 PDT
Comment on
attachment 344893
[details]
Patch Clearing flags on attachment: 344893 Committed
r233787
: <
https://trac.webkit.org/changeset/233787
>
WebKit Commit Bot
Comment 4
2018-07-12 16:46:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-07-12 16:47:17 PDT
<
rdar://problem/42143573
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug