PingLoad does not need to ref the NetworkConnectionToWebProcess https://bugs.webkit.org/show_bug.cgi?id=187624

Reviewed by Youenn Fablet.

PingLoad does not need to ref the NetworkConnectionToWebProcess and keep it alive longer than it needs to be.
Instead, ref the IPC::Connection which is lighter weight and gets invalidated when the NetworkConnectionToWebProcess
is destroyed.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::loadPing):
(WebKit::NetworkConnectionToWebProcess::didFinishPingLoad): Deleted.
* NetworkProcess/NetworkConnectionToWebProcess.h:


Canonical link: https://commits.webkit.org/202838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233787 268f45cc-cd09-0410-ab3c-d52691b4dbfc